# messenger

./: .env  README.md  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 02955d5a20c3_fix_relationships.py  575400fa7036_create_user_table.py  665f743ab568_chat_and_message_tables.py  9ea7cf9e26dc_create_user_table.py  c37931ff5cf8_fix_relationship.py  d02794d6bc1e_create_user_table.py  e62a19b96ce4_create_user_table.py  eec5b9251607_init_db.py
backend/: alembic.ini  main.py
backend/alembic/: env.py
backend/alembic/versions/: 5be13058dcde_fix_relationship.py  cfaa27d9dbb5_add_relationship.py
backend/src/: database.py
backend/src/auth/: auth.py  manager.py  models.py  schemas.py
backend/src/chat/: repository.py  router.py  schemas.py  services.py
backend/src/history/: repository.py  router.py  schemas.py
frontend/: chat.html  history.html  login.html  register.html  search.html
src/: database.py
src/auth/: auth.py  models.py
src/chat/: models.py  queries.py  repository.py  router.py
